Fixed scrolling issue and improved search bar visibility

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('/background.jpg');
+  background-image: url('background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
